--- a/flutter_router_demo/pubspec.yaml
+++ b/flutter_router_demo/pubspec.yaml
@@ -28,15 +28,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-
+  tj_flutter_router_plugin: ^0.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
 #暂时先用本地的
-  tj_flutter_router_plugin:
-    path: '../tj_flutter_router_plugin'
+#  tj_flutter_router_plugin:
+#    path: '../../tj_flutter_router_plugin'
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
