--- a/FluttterRouterDemo_android/app/build.gradle
+++ b/FluttterRouterDemo_android/app/build.gradle
@@ -27,10 +27,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation project(':flutter')
     implementation project(':tj_flutter_router_plugin')
+
+    annotationProcessor 'com.github.wanggy820:RouterBindProcessor:1.0.7'
 }
